# Job-Portal-Web-Application

./: README.md  app.py  database.py  pyproject.toml  requirements.txt
static/: style.css  style1.css  style5.css  style6.css
templates/: admin.html  admin_home.html  admin_login.html  application_form.html  application_submitted.html  banner.html  contact.html  dashboard.html  error.html  footer.html  home.html  jobitem.html  jobnotfound.html  jobpage.html  login.html  nav.html  profile.html  signup.html  upload.html
